hphp/hack/test/typecheck/toplevel_stmt_coeffects.php.exp
ERROR: File "toplevel_stmt_coeffects.php", line 5, characters 1-51:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
